Optimized for mobile. Fixed spacing. Fixed jumps.

--- a/src/App.css
+++ b/src/App.css
@@ -12,26 +12,6 @@ html,
   font-family: "DM Sans", sans-serif;
 }
 
-/* #logoHeader {
+.floatyThingy {
+  top: -132px;
 }
-
-#titleHeader {
-}
-
-#aboutHeader {
-}
-
-#firstHeader {
-}
-
-#studentsHeader {
-}
-
-#mentorsHeader {
-}
-
-#sponsorsHeader {
-}
-
-#contactsHeader {
-} */
